# photo-map

./: .gitignore  Cargo.toml  README.md
src/: gps-db.sql  lib.rs  live-db.sql
web/: clusters.json  data.json  index.html  live.html  summary.json
web/css/: live-style.css  minimap-override.css  style.css
web/gray-photo.mss.tm2/: labels.mss  poi.mss  project.xml  project.yml  road.mss  style.mss
web/js/: live-script.js  script.js
