[package]

name = "photo_map"
version = "0.0.1"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

[dependencies]
rexiv2 = "0.2"
getopts = "0.2"
simple_parallel = "0.1"
rusqlite = "0.0.14"
chrono = "0.2"
num = "0.1"
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"
rand = "0.3"
num_cpus = "0.1"
hyper = "0.3"
mustache = "*"

#iron = "0.1"
#router = "0.0"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.nickel]
git = "https://github.com/nickel-org/nickel.rs"
[dependencies.nickel_macros]
git = "https://github.com/nickel-org/nickel.rs"
